syntax = "proto3";

package auth;

option go_package = "./;grpcauthpb";


service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string user_id = 1;
    string user_name = 2;
    string token = 3;
}

// message RegisterRequest {
//     string name = 1;
//     string email = 2;
//     string password = 3;
//     int32 role_id = 4;
// }

//
message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    int32 role_id = 4;
}
//

message RegisterResponse {
    string user_id = 1;
    string email = 2;
    bool success = 3; 
}

/*
protoc --proto_path=api/grpc/auth/proto \
--go_out=api/grpc/auth/proto \
--go-grpc_out=api/grpc/auth/proto \
--go_opt=paths=source_relative \
--go-grpc_opt=paths=source_relative \
api/grpc/auth/proto/auth.proto
*/